base/deployment-web.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: web
spec:
  selector:
    matchLabels:
      app: frontend
      release: v0.0
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend
        release: v0.0
    spec:
      volumes:
      - name: config
        secret:
          secretName: config
          items:
            - key: config.yaml
              path: config.yaml

      containers:
        - name: frontend
          image: "gcr.io/PROJECT_ID/IMAGE:TAG"
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          args:
          - /bin/bash
          - -c
          - |
            source /skyportal_env/bin/activate && \
            (make log &) && \
            baselayer/tools/env_summary.py ${FLAGS} && \
            supervisord -c baselayer/conf/supervisor/supervisor.conf
          volumeMounts:
          - name: config
            mountPath: /etc/skyportal/
            readOnly: true
          livenessProbe:
            tcpSocket:
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
