base/service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    app: db
    version: v9.6
spec:
  selector:
    app: db
  ports:
    - name: http
      port: 5432
      targetPort: 5432
      protocol: TCP
