base/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    app: web
    release: v0.0
spec:
  type: LoadBalancer
  selector:
    app: frontend
    release: v0.0
  ports:
    - name: http
      port: 80
      targetPort: 5000
      protocol: TCP
