base/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: skyportal-ingress
  annotations:
    # As per https://cloud.google.com/compute/docs/ip-addresses/reserve-static-external-ip-address
    kubernetes.io/ingress.global-static-ip-name: address-skyportal
    networking.gke.io/managed-certificates: certificate-skyportal-0
    external-dns.alpha.kubernetes.io/hostname: alpha.skyportal.io.
spec:
  backend:
    serviceName: web
    servicePort: 80
